<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_ocr_operations"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mcc.proj2.androidocr.OCRProcessorActivity">

    <TextView
        android:id="@+id/tv_operating_mode"
        android:text="@string/str_select_operating_mode"
        android:textSize="20sp"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rg_operating_mode"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_mode_local"
            android:text="@string/str_local_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_mode_remote"
            android:text="@string/str_remote_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_mode_benchmark"
            android:text="@string/str_benchmark_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <View
        android:id="@+id/sep_rgroup"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:visibility="visible"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/tv_select_img"
        android:text="@string/str_select_image_source"
        android:textSize="20sp"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rg_imgSource"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_camera"
            android:drawableStart="@mipmap/ic_camera"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:layout_marginEnd="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_img_gallery"
            android:drawableStart="@mipmap/ic_gallery"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:layout_marginEnd="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <View
        android:id="@+id/sep_imgSrc"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:visibility="visible"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/lay_recentList"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ListView
            android:id="@+id/lv_remote_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>

</LinearLayout>