<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/str_comparison_statistics"
        android:padding="2dp"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Layout that displays the total number of processing images -->
            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_tot_processed_images"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/str_tot_num_images_processed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_tot_processed_images"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!-- Layout displaying local processing stats -->
            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_local_mode_stats"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/str_local_processing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!-- Layout displaying remote processing stats -->
            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_remote_mode_stats"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/str_remote_processing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>