<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mcc.proj2.androidocr.LoginManagerActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/tb_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_username"
                android:paddingStart="10dp"
                android:paddingEnd="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/tb_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_password"
                android:paddingStart="10dp"
                android:paddingEnd="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:text="@string/str_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
